--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ Pillow==10.1.0
 # QR code generation
 qrcode[pil]==7.4.2
 
+# Web automation for webcast feature
+playwright==1.40.0
+
 # Optional: Enhanced logging and configuration
 python-json-logger==2.0.7
 
