--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ aiofiles==23.2.1
 
 # HTTP requests and system monitoring
 requests==2.31.0
+aiohttp==3.9.1
 psutil==5.9.6
 
 # Image processing for background generation
