--- a/requirements.txt
+++ b/requirements.txt
@@ -26,10 +26,10 @@ playwright==1.40.0
 python-json-logger==2.0.7
 PyYAML==6.0.1
 
-# Development and testing dependencies (uncomment if needed)
-# pytest==7.4.3
-# pytest-asyncio==0.21.1
-# httpx==0.25.2  # For testing FastAPI endpoints
+# Development and testing dependencies
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2  # For testing FastAPI endpoints
 
 # Production deployment (uncomment if needed)
 # gunicorn==21.2.0
